--- a/AU_Policy/component.yaml
+++ b/AU_Policy/component.yaml
@@ -89,10 +89,12 @@ satisfies:
         of the capacity being exceeded. 18F plans to incorporate the use of the S3 cloud
         service for greater storage capacity if needed.
   standard_key: NIST-800-53
-- control_key: AU-7 (1)
+- control_key: AU-5
   covered_by: []
   implementation_status: none
-  narrative: In Progress
+  narrative:
+    - text: |
+        In progress
   standard_key: NIST-800-53
 - control_key: AU-9
   covered_by: []
