--- a/SA_Policy/component.yaml
+++ b/SA_Policy/component.yaml
@@ -195,15 +195,15 @@ satisfies:
   implementation_status: none
   narrative:
   - text: |-
-      TODO
-  standard_key: NIST-800-53
+        18F has implemented an incident response process in the event of a security incident. This process outlines the procedure to execute in the event an investigator or a security component of the system identifies a security threat. This process is documented at https://docs.cloud.gov/ops/security-ir/   
+  standard_key: NIST-801-53
 - control_key: SA-9 (2)
   covered_by:
   - verification_key: POLICY_DOC
   implementation_status: none
   narrative:
   - text: |-
-      TODO
+     18F documents configuration settings for its information technology productions within the Cloud Foundry platform to reflect the most restrictive mode consisten with operational requirements.  18F follows industry security best practices and guidance provided in NIST special publication 800-70. All ports, protocols, and services are restricted to least privilege.  18F uses the following approved FISMA ready baselines located at https://github.com/fishma-ready.   
   standard_key: NIST-800-53
 - control_key: SA-9 (4)
   covered_by:
@@ -211,7 +211,7 @@ satisfies:
   implementation_status: none
   narrative:
   - text: |-
-      TODO
+        The organization employs [Assignment: organization-defined security safeguards] to ensure that the interests of [Assignment: organization-defined external service providers] are consistent with and reflect organizational interests. 18F uses AWS GovCloud which is FedRamp certified which has reviewed and approved by the FedRamp JAB.  
   standard_key: NIST-800-53
 - control_key: SA-9 (5)
   covered_by:
@@ -219,7 +219,7 @@ satisfies:
   implementation_status: none
   narrative:
   - text: |-
-      TODO
+      The organization restricts the location of [Selection (one or more): information processing; information/data; information system services] to [Assignment: organization-defined locations] based on [Assignment: organization-defined requirements or conditions]. 18F utilizes AWS GovCloud to deploy Cloud Foundry platform.  AWS GovCloud is FedRamp certified and is located in one Avaliablity Zone.  All Cloud Foundry applications are restricted to this location. 
   standard_key: NIST-800-53
 - control_key: SA-10
   covered_by:
