--- a/CM_Policy/component.yaml
+++ b/CM_Policy/component.yaml
@@ -7,27 +7,90 @@ satisfies:
   narrative:
     - text: 18F Policy
   standard_key: NIST-800-53
-- control_key: CM-8
+- control_key: CM-3
   covered_by:
   - verification_key: POLICY_DOC
   implementation_status: none
-  narrative: '18F posts its current inventory of information systems on its dashboard
-    located at  https://18f.gsa.gov/dashboard/. Several sources are used to capture
-    complete inventories of the virtual infrastructure and its information systems
-    while providing the level of granularity deemed necessary for tracking and reporting.
-    The AWS Management Console, VisualOps, Cloud Checkr, Github, and Nexpose are used
-    to provide additional enumeration capabilities.
+  narrative:
+    - key: a
+      text: |
+        All Configuration Change control:
+        18F provisions its infrastructure with AWS CloudFormation, the AWS CloudFormation
+        template describes exactly what resources are provisioned and their settings.
+        Because these templates are text files, 18F can simply track differences in
+        these templates to track changes to its infrastructure, similar to the way
+        developers control revisions to source code.
 
-    Cloud Checkr is currently deployed to facilitate asset management, along with
-    other operations activities, on a real-time ongoing basis. Components deployed
-    in the virtual infrastructure are accurately inventoried and can be filtered to
-    a specific informaton system groups as well as a group of web services or  those
-    components that are related to a spcecific informaton system.
+        18F uses version control systems with its cloud formation templates to know
+        exactly what changes were made, who made them, and when. If at any point 18F
+        needs to reverse changes to infrastructure, you can use a previous version of
+        a template.
 
-    The VisualOps Cloud management tool is used to provide a visual, real-time and
-    automated representation of the virtual infrastructure and applications within
-    the 18F environment. It also provides a global view of the 18F AWS account where
-    all regions and services can be seen in one place.
+        18F uses GitHub for additional tracking and documenting of authorized changes
+        within the infrastructure and applications including Cloud Foundry platform as
+        a service. Within GitHub, a diff function is used to compare and contrast any
+        changes made to configurations of Cloud Foundry.
+    - key: b
+      text: |
+        18F reviews proposed configuration-controlled changes to all of its information
+        systems and infrastructure and approves or disapproves such changes with explicit
+        consideration for security impact analysis within the Virtual Private Cloud
+        environment. All reviews and approvals are conducted within 18Fs GitHub ticketing
+        and tracking system.
+    - key: c
+      text: |
+        18F uses the following methods to document configuration change decisions
+        associated with its information systems.  For changes related to the its
+        virtual infrastructure, 18F uses VisualOps and Cloud Checkr for real-time
+        configuration changes which are documented, approved and tracked within GitHub.
+        All Cloud Foundry configuration changes are documented, approved and tracked
+        within 18F's GitHub site.  All configuration changes related to applications
+        and websites hosted within the 18F AWS and Cloud Foundry environment are
+        requested by the systems owner and approved by DevOps within the 18F GitHub
+        tracking systems.
+    - key: d
+      text: |
+        When configuration changes have been approved through 18F's GitHub
+        ticketing and tracking system, the DevOps team implements approved configuration-controlled
+        changes to the information system and then provides a status of the changes
+        completed and closes out the ticket.
+    - key: e
+      text: |
+        Records of configuration-controlled
+        changes are retained for at least 1 year in accordance with the 18F Configuration
+        Management policy and utilizing the 18F GitHub site and S3 to store all changes
+        requested, approved, disapproved, implemented and pending.
+    - key: f
+      text: |
+        Audits for the virtual infrastructure and Cloud Foundry platform as a
+        service and applications are conducted by DevOps, ISSOs and Cloud Foundry
+        project manager of all configuration-controlled changes to the information
+        system.  These audits take place no less than once a month and are documented
+        in the GitHub ticketing and tracking system, per the 18F Configuration
+        management policy Section 3 which states
+
+        18F will conduct a monthly audit of information system which identifies and
+        eliminates unnecessary functions, ports, protocols, and/or services.
+    - key: g
+      text: |
+        18F coordinates
+        and provides oversight for configuration change control activities through its
+        GitHub tracking and ticketing systems and Slack communications channel which
+        is integrated with GitHub that convenes whenever there are significant and pending
+        changes to the 18F security, cloud infrastructure and applications.
+  standard_key: NIST-800-53
+- control_key: CM-6
+  covered_by:
+  - verification_key: POLICY_DOC
+  implementation_status: none
+  narrative:
+    - key: a
+      text: |
+        18F uses established and documents configuration settings
+        for its information technology products employed within the Cloud Foundry platform
+        that reflect the most restrictive mode consistent with operational requirements.
+        18F follows industry best practices and guidance provided in NIST Special Publication
+        800-70, Security Configuration Checklist Program for IT Products
 
     The 18F GitHub respository also is used to show a current lists of components
     that make up the Cloud.Gov inventory. It is located at https://docs.cloud.gov/ops/repos/
